tests/transpiler/x/scala/right_join.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/right_join.scala:9: error: ';' expected but 'if' found.
    val result: ArrayBuffer[Map[String,Any]] = ({ var _res = ArrayBuffer[Map[String,Any]]() ; for (o <- orders) { var matched = false ; for (c <- customers) { if (o.customerId == c.id) { matched = true ; _res.append(Map("customerName" -> c.name, "order" -> o)) } } if (!matched) { var c = null ; _res.append(Map("customerName" -> c.name, "order" -> o)) } } _res })
                                                                                                                                                                                                                                                                         ^
one error found
